--- a/Client/Angular/package.json
+++ b/Client/Angular/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "json-configs": "json-server --watch configs.json",
+    "json-configs": "json-server --watch ./src/assets/configs.json",
     "json-hardwares": "json-server --watch hardwares.json"
   },
   "private": true,
