--- a/Client/Angular/package.json
+++ b/Client/Angular/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "start:proxy": "ng serve --proxy-config proxy.conf.json",
     "start:proxy-verbose": "ng serve --proxy-config proxy.conf.json --verbose",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "json-configs": "json-server --watch ./src/assets/configs.json",
