--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "mongoose-id-validator": "^0.6.0",
     "nodemon": "^2.0.22",
     "swagger-ui-express": "^4.6.2",
     "winston": "^3.8.2",
