--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
+# .env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -160,6 +160,6 @@ dist
 .history
 .ionide
 
-/config/
+# /config/
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,node
